--- a/index3.html
+++ b/index3.html
@@ -1,8 +1,8 @@
 <body>
   <ul>
-    <li>item 1</<li>
-    <li>item 2</<li>
-    <li>item 3</<li>
-    <li>item 4</<li>
+    <li>item 1</li>
+    <li>item 2</li>
+    <li>item 3</li>
+    <li>item 4</li>
   </ul>
 </body>
