--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <body>
   <ul>
-    <li>item 1</li>
-    <li>item 2</li>
-    <li>item 3</li>
-    <li>item 5</li>
+    <li>item a</li>
+    <li>item b</li>
+    <li>item c</li>
+    <li>item d</li>
   </ul>
-</body
+</body>
